style.css
/* ... */
.profile-links ul a {
	display: flex;
	align-items: center;
	text-decoration: none;
	font-size: 1.5rem;
	filter: brightness(0.8);
}

.profile-links ul a:hover {
	filter: brightness(1);
}

/* FOOTER */
footer {
	border-top: 1px solid rgba(255, 255, 255, 0.1);
	margin-top: 5rem;
}

.footer-wrapper {
	position: relative;
	padding: 2rem 4rem 1rem 4rem;
	max-width: 1440px;
	margin: 0 auto;
}

.footer-wrapper i {
	margin-left: 1rem;
	color: white;
	font-size: 2rem;
	transition: 0.3s ease;
	font-size: 1.2rem;
}

.contact-info {
	display: grid;
	grid-template-columns: 1fr 1fr;
	margin-bottom: 2rem;
}

.contact-info h4 {
	grid-row: 1;
	margin-bottom: 1rem;
	color: var(--header);
	font-size: 0.8rem;
}

.contact-info *:not(h4) {
	grid-row: 2;
	color: var(--navigation);
}

.bottom {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.bottom p {
	color: var(--paragraph);
	font-weight: 700;
	align-self: flex-end;
	font-size: 0.7rem;
}

/* DARK MODE CLASSES */
/* DARK MODE - GENERAL CLASS, INVERT - REVERSES EFFECTS OF INVERT FILTER */

.dark-mode {
	background-color: var(--lm-primary);
	filter: invert() hue-rotate(180deg);
	transition: background-color 0.5s ease-in;
}

.dark-mode p,
.dark-mode ul,
.dark-mode li,
.dark-mode a,
.dark-mode h1,
.dark-mode h2,
.dark-mode h3,
.dark-mode h4,
.dark-mode .media-links *,
.dark-mode .contact-info *,
.dark-mode .bottom {
	color: var(--lm-header);
}

.dark-mode .stack li {
	color: var(--lm-list);
}

.invert {
	filter: invert() hue-rotate(180deg);
}

@media (max-width: 740px) {
	/* GENERAL */
	.divider-primary {
		margin: 1rem 0;
	}

	.divider-secondary {
		margin: 1rem 0;
	}

	.projects-wrapper {
		padding: 0;
	}
	.hero-wrapper,
	.about,
	.tech,
	.footer-wrapper,
	.div-container,
	.container,
	.profile-links {
		padding: 2rem;
	}

	/* BOTTOM NAVIGATION */

	.nav-mobile {
		position: fixed;
		bottom: 0;
		background-color: var(--mobile-nav);
		border-top: 1px solid rgba(255, 255, 255, 0.1);
		display: flex;
		justify-content: center;
		align-items: center;
		padding: 1rem 4rem;
		width: 100%;
		z-index: 200;
		text-align: center;
	}

	.nav-mobile ul {
		gap: clamp(1rem, 14vw, 8rem);
	}

	.nav-mobile .nav-list a {
		color: white;
	}

	.nav-mobile i {
		display: block;
		margin-bottom: 0.5rem;
	}

	/* HEADER */

	header .container {
		padding: 2 4rem;
	}

	header .nav-list {
		display: none;
	}

	/* HERO */

	.hero-text-container {
		margin-top: 2rem;
	}

	.hero-text-container p {
		max-width: 100%;
	}

	.cta {
		padding: 0.5rem 1rem;
	}

	/* PROJECTS SECTION */

	.project-cards-wrapper {
		display: grid;
		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
		grid-auto-rows: 1fr;
		gap: 5rem;
	}

	.project-cards-wrapper {
		grid-auto-rows: auto;
		gap: 2.5rem;
	}

	/* TECH SECTION */

	.tech > p {
		max-width: 100%;
	}

	.tech-cards-wrapper {
		gap: 2rem;
	}

	.tech-card p {
		max-width: 100%;
	}

	/* ABOUT SECTION*/

	.about > p {
		max-width: 100%;
	}

	/* FOOTER */

	footer {
		margin-top: 3rem;
		margin-bottom: 4.75rem;
	}

	.contact-info,
	.bottom {
		display: flex;
		flex-direction: column;
	}

	.bottom small {
		margin-top: 1rem;
		order: 2;
	}

	.contact-info h4 {
		margin: 1rem 0 0.5rem 0;
	}
}

